--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<script src="d3.v2.js"></script>
-<script src="d3.layout.cloud.js"></script>
-<script src="urlsData.js"></script>
-<body>
+<head>
+  <meta charset="utf-8">
+  <script src="d3.v2.js"></script>
+  <script src="d3.layout.cloud.js"></script>
+  <script src="urlsData.js"></script>
+  <script src="wordsData.js"></script>
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="styles.css">
+  <title>HN Data Analysis</title>
+</head>
+<body style="background: rgb(238, 238, 238);">
+  <h1>Article Hosts and Topics From Ycombinator's Hackernews</h1>
+  <div class="container">
+    <div class="urls"><h3>Most Common Urls Where Articles Are Hosted</h3></div>
+    <div class="words"><h3>Most Common Words in Article Titles</h3></div>
+  </div>
+</body>
 <script>
   var fill = d3.scale.category20();
 
@@ -15,8 +27,38 @@
       .on("end", draw)
       .start();
 
+  function draw(urls) {
+    d3.select(".urls").append("svg")
+        .attr("width", 700)
+        .attr("height", 700)
+      .append("g")
+        .attr("transform", "translate(350,350)")
+      .selectAll("text")
+        .data(urls)
+      .enter().append("text")
+        .style("font-size", function(d) { return d.size + "px"; })
+        .style("font-family", "Impact")
+        .style("fill", function(d, i) { return fill(i); })
+        .attr("text-anchor", "middle")
+        .attr("transform", function(d) {
+          return "translate(" + [d.x, d.y] + ")rotate(" + d.rotate + ")";
+        })
+        .text(function(d) { return d.text; });
+  }
+</script>
+<script>
+  var fill = d3.scale.category20();
+
+  d3.layout.cloud().size([700, 700])
+      .words(wordsData)
+      .rotate(function() { return ~~(Math.random() * 2) * 90; })
+      .font("Impact")
+      .fontSize(function(d) { return d.size; })
+      .on("end", draw)
+      .start();
+
   function draw(words) {
-    d3.select("body").append("svg")
+    d3.select(".words").append("svg")
         .attr("width", 700)
         .attr("height", 700)
       .append("g")
