:lipstick: adds some more formatting and styles to the output html word clouds

--- a/www/index.html
+++ b/www/index.html
@@ -9,12 +9,13 @@
   <link rel="stylesheet" href="styles.css">
   <title>HN Data Analysis</title>
 </head>
-<body style="background: rgb(238, 238, 238);">
+<body>
   <h1>Article Hosts and Topics From Ycombinator's Hackernews</h1>
   <div class="container">
-    <div class="urls"><h3>Most Common Urls Where Articles Are Hosted</h3></div>
-    <div class="words"><h3>Most Common Words in Article Titles</h3></div>
+    <div class="urls"><h3>Urls Where Articles Are Hosted</h3></div>
+    <div class="words"><h3>Words in Article Titles</h3></div>
   </div>
+  <div class="footer">See <a href="https://github.com/Usarneme/pieathon">https://github.com/Usarneme/pieathon</a> for the code behind this word cloud.</div>
 </body>
 <script>
   var fill = d3.scale.category20();
